feat: add header

--- a/index.html
+++ b/index.html
@@ -8,8 +8,107 @@
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-    StoneWood
-dscdscs 
+
+    <header class="section-header section-outer">
+        <div class="section-inner section-inner--narrow">
+            <a class="logo logo--shadowed" href="##">
+                <img src="assets/img/header/logo.svg" alt="Логотип StoneWood">
+            </a>
+            <div class="contacts header__contacts">
+                <div class="contacts__phones">
+                    <a href="tel:+74955328087" class="contacts__link contacts-link">
+                        <span class="contacts-link__icon">
+                            <svg width="23" height="23" viewBox="0 0 23 23" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M22.9926 5.90293C22.8711 8.7765 21.8131 13.115 17.4636 17.4645C13.1139 21.8141 8.77556 22.872 5.902 22.9936C5.80241 22.9978 5.70316 23 5.60391 23C5.60379 23 5.60368 23 5.60357 23C3.71466 23 1.93692 22.2623 0.597623 20.9232C-0.199208 20.1263 -0.199208 18.8298 0.597623 18.033L3.93859 14.692C4.32457 14.3061 4.83774 14.0935 5.38372 14.0935C5.92959 14.0935 6.44276 14.3061 6.82874 14.692L8.15724 16.0205C8.244 16.0268 8.35336 16.0318 8.4819 16.0318C9.52197 16.0318 11.5763 15.7222 13.6488 13.6498C16.0406 11.258 16.0782 8.89414 16.0216 8.16045L14.691 6.82979C13.8942 6.03296 13.8942 4.73647 14.6909 3.93976L18.032 0.598674C18.4178 0.212579 18.931 0 19.477 0C20.023 0 20.536 0.212579 20.9221 0.59856C22.3211 1.99781 23.0759 3.93124 22.9926 5.90293Z" fill="#FFE848"/>
+                            </svg>
+                        </span>
+                        <span class="contacts-link__text">8 (495) 532-80-87</span>
+                    </a>
+                    <a href="tel:+74955328087" class="contacts__link contacts-link">
+                        <span class="contacts-link__icon">
+                            <svg width="23" height="17" viewBox="0 0 23 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M13.8557 9.10107L11.7997 10.8472C11.6354 10.9833 11.3961 10.9833 11.2365 10.8472L9.18055 9.10577L0.783203 16.2029H22.2154L13.8557 9.10107Z" fill="white"/>
+                                <path d="M0 1.32764V15.6721L8.45367 8.49988L0 1.32764Z" fill="white"/>
+                                <path d="M0.783203 0.797363L11.4993 9.8894L22.2154 0.797363H0.783203Z" fill="white"/>
+                                <path d="M14.5469 8.49988L23.0005 15.6721V1.32764L14.5469 8.49988Z" fill="white"/>
+                            </svg>
+                        </span>
+                        <span class="contacts-link__text">8 (495) 532-80-87</span>
+                    </a>
+                </div>
+                <ul class="contacts__list">
+                    <li class="contacts__item">
+                        <a href="https//:vk.com" class="contacts__link">
+                            <svg width="27" height="27" viewBox="0 0 27 27" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <g clip-path="url(#clip0_1_270)">
+                                <path d="M24.0328 16.6025C24.0328 16.6025 26.2158 18.7584 26.7558 19.7561C26.7663 19.7705 26.7745 19.7864 26.7801 19.8033C27.0001 20.1719 27.0541 20.4608 26.9461 20.6741C26.7639 21.0264 26.1469 21.2033 25.9377 21.2181H22.0794C21.8107 21.2181 21.2518 21.1479 20.5714 20.6781C20.0517 20.315 19.5346 19.7169 19.0338 19.1324C18.2859 18.2643 17.6392 17.511 16.9845 17.511C16.9018 17.5108 16.8196 17.5245 16.7415 17.5515C16.246 17.7081 15.6169 18.4142 15.6169 20.2947C15.6169 20.8833 15.1525 21.2181 14.8272 21.2181H13.06C12.4579 21.2181 9.32322 21.0075 6.54357 18.0767C3.13752 14.4884 0.0784216 7.29018 0.0487216 7.22673C-0.141628 6.76098 0.257972 6.50718 0.689972 6.50718H4.58607C5.10852 6.50718 5.27862 6.82308 5.39742 7.10658C5.53512 7.43193 6.04542 8.73333 6.88242 10.1954C8.23782 12.5741 9.07077 13.542 9.73632 13.542C9.86136 13.5424 9.98429 13.5098 10.0927 13.4475C10.9621 12.9696 10.8001 9.86463 10.7596 9.22473C10.7596 9.10053 10.7583 7.83828 10.3128 7.22808C9.99417 6.79068 9.45147 6.62058 9.12342 6.55848C9.21117 6.43158 9.39747 6.23718 9.63642 6.12243C10.2318 5.82543 11.3077 5.78223 12.3756 5.78223H12.9682C14.1265 5.79843 14.4262 5.87268 14.8474 5.97933C15.6952 6.18183 15.7114 6.73128 15.6372 8.60238C15.6156 9.13698 15.5926 9.73908 15.5926 10.4478C15.5926 10.599 15.5859 10.7678 15.5859 10.9392C15.5602 11.8991 15.5265 12.9804 16.2042 13.4246C16.2921 13.4793 16.3936 13.5083 16.4971 13.5083C16.732 13.5083 17.4354 13.5083 19.3429 10.2345C20.1799 8.78868 20.8279 7.08363 20.8725 6.95538C20.9103 6.88383 21.0237 6.68268 21.1614 6.60168C21.2593 6.54956 21.369 6.52353 21.48 6.52608H26.0632C26.5627 6.52608 26.9016 6.60168 26.9677 6.79068C27.0784 7.09713 26.9461 8.03268 24.8536 10.8623C24.5013 11.3334 24.1921 11.7411 23.9208 12.0975C22.024 14.5869 22.024 14.7125 24.0328 16.6025Z" fill="#449BFF"/>
+                                </g>
+                                <defs>
+                                <clipPath id="clip0_1_270">
+                                <rect width="27" height="27" fill="white"/>
+                                </clipPath>
+                                </defs>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="contacts__item">
+                        <a href="https//:vk.com" class="contacts__link">
+                            <svg width="27" height="27" viewBox="0 0 27 27" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path fill-rule="evenodd" clip-rule="evenodd" d="M15.7197 15.7165C13.9132 17.5827 13.7816 19.9066 13.626 25C18.3725 25 21.6502 24.9821 23.343 23.3401C24.985 21.6473 25 18.2138 25 13.6232C19.9096 13.7876 17.5827 13.9103 15.7194 15.7168M2.0003 13.6232C2.0003 18.2141 2.01822 21.6472 3.66026 23.3401C5.35306 24.982 8.63108 25 13.3773 25C13.2128 19.9066 13.0901 17.5827 11.2836 15.7165C9.41734 13.91 7.09341 13.7784 2 13.6228M13.377 2.00023C8.63943 2.00023 5.35283 2.01518 3.65995 3.66017C2.01799 5.35295 2 8.78346 2 13.3771C7.09341 13.2126 9.41734 13.09 11.2836 11.2805C13.0901 9.41719 13.2217 7.09328 13.3773 2M15.7191 11.2805C13.9126 9.41719 13.7811 7.09328 13.6255 2C18.372 2 21.6496 2.01495 23.3425 3.65994C24.9845 5.35272 24.9995 8.78323 24.9995 13.3768C19.909 13.2124 17.5821 13.0897 15.7189 11.2803" fill="#333333"/>
+                                <path fill-rule="evenodd" clip-rule="evenodd" d="M25 13.6236V13.3783C19.9095 13.2138 17.5826 13.0912 15.7193 11.2817C13.9128 9.41834 13.7812 7.09437 13.6257 2.00098H13.3774C13.2129 7.09445 13.0903 9.41841 11.2838 11.2817C9.41744 13.0912 7.09347 13.2228 2 13.3783V13.6236C7.09347 13.7881 9.41744 13.9107 11.2838 15.7172C13.0903 17.5835 13.2218 19.9075 13.3774 25.001H13.6257C13.7902 19.9075 13.9128 17.5835 15.7193 15.7172C17.5826 13.9107 19.9096 13.7791 25 13.6236Z" fill="url(#paint0_linear_1_254)"/>
+                                <defs>
+                                <linearGradient id="paint0_linear_1_254" x1="1" y1="0.5" x2="27.5" y2="27.5" gradientUnits="userSpaceOnUse">
+                                <stop stop-color="white"/>
+                                <stop offset="0.991317" stop-color="white" stop-opacity="0.83"/>
+                                </linearGradient>
+                                </defs>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="contacts__item">
+                        <a href="https//:vk.com" class="contacts__link">
+                            <svg width="24" height="23" viewBox="0 0 24 23" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <g filter="url(#filter0_d_1_251)">
+                                <path d="M11.9392 0.0133012C5.86493 0.302524 1.07147 5.36122 1.0899 11.4424C1.09551 13.2945 1.54265 15.0427 2.33144 16.5874L1.12037 22.4661C1.05486 22.7841 1.34166 23.0625 1.65756 22.9877L7.41797 21.623C8.89791 22.3602 10.5602 22.786 12.3195 22.8128C18.5279 22.9076 23.7047 17.9779 23.8983 11.7717C24.1057 5.11914 18.6151 -0.304634 11.9392 0.0133012ZM18.8126 17.7228C17.1256 19.4098 14.8826 20.3388 12.4969 20.3388C11.1 20.3388 9.76255 20.0254 8.52167 19.4073L7.71946 19.0077L4.18773 19.8445L4.93114 16.2357L4.53592 15.4617C3.89174 14.2002 3.56512 12.836 3.56512 11.4071C3.56512 9.02128 4.49417 6.77834 6.18116 5.0913C7.85307 3.41939 10.1326 2.47521 12.4971 2.47521C14.8828 2.47527 17.1257 3.40432 18.8127 5.09125C20.4996 6.77823 21.4287 9.02116 21.4288 11.4069C21.4287 13.7714 20.4845 16.051 18.8126 17.7228Z" fill="#7FED6F"/>
+                                <path d="M18.0335 13.8809L15.824 13.2465C15.5335 13.1631 15.2207 13.2455 15.009 13.4612L14.4687 14.0117C14.2408 14.2438 13.8951 14.3184 13.5936 14.1964C12.5483 13.7734 10.3496 11.8185 9.78813 10.8406C9.62614 10.5586 9.65293 10.2059 9.85183 9.94856L10.3236 9.33826C10.5084 9.09915 10.5474 8.77803 10.4252 8.50162L9.49556 6.39912C9.27289 5.89554 8.62937 5.74895 8.20896 6.10451C7.59229 6.62608 6.8606 7.41866 6.77165 8.29672C6.61483 9.84481 7.27875 11.7963 9.7894 14.1396C12.6899 16.8467 15.0126 17.2044 16.5248 16.838C17.3826 16.6303 18.0681 15.7974 18.5007 15.1154C18.7957 14.6504 18.5628 14.0329 18.0335 13.8809Z" fill="#7FED6F"/>
+                                </g>
+                                <defs>
+                                <filter id="filter0_d_1_251" x="-2.91016" y="0" width="30.8145" height="31" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
+                                <feFlood flood-opacity="0" result="BackgroundImageFix"/>
+                                <feColorMatrix in="SourceAlpha" type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0" result="hardAlpha"/>
+                                <feOffset dy="4"/>
+                                <feGaussianBlur stdDeviation="2"/>
+                                <feComposite in2="hardAlpha" operator="out"/>
+                                <feColorMatrix type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.25 0"/>
+                                <feBlend mode="normal" in2="BackgroundImageFix" result="effect1_dropShadow_1_251"/>
+                                <feBlend mode="normal" in="SourceGraphic" in2="effect1_dropShadow_1_251" result="shape"/>
+                                </filter>
+                                </defs>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="contacts__item">
+                        <a href="https//:vk.com" class="contacts__link">
+                            <svg width="23" height="23" viewBox="0 0 23 23" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M19.8467 3.50206C19.8467 3.50206 21.7085 2.77612 21.5533 4.53912C21.5016 5.26506 21.0362 7.80585 20.6742 10.5541L19.433 18.695C19.433 18.695 19.3296 19.8876 18.3988 20.095C17.4679 20.3024 16.0716 19.369 15.813 19.1616C15.6062 19.0061 11.9345 16.6727 10.6416 15.5319C10.2796 15.2208 9.8659 14.5986 10.6933 13.8726L16.1233 8.68737C16.7439 8.06512 17.3645 6.61325 14.7787 8.37625L7.53878 13.3023C7.53878 13.3023 6.71135 13.8208 5.15996 13.3541L1.79851 12.3171C1.79851 12.3171 0.557372 11.5393 2.67766 10.7614C7.84909 8.32435 14.2099 5.83542 19.8467 3.50206Z" fill="#458FFF"/>
+                            </svg>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </header>
+
+    <main class="section-main section-outer">
+
+    </main>
+
+    <footer class="section-footer section-outer">
+        <div class="section-inner">
+
+        </div>
+    </footer>
+
     <script src="js/script.js"></script>
 </body>
 </html>
