--- a/index.html
+++ b/index.html
@@ -99,8 +99,29 @@
         </div>
     </header>
 
-    <main class="section-main section-outer">
-
+    <main class="section-main">
+        <section class="section-hero section-outer">
+            <div class="section-inner">
+                <div class="hero__content">
+                    <h1 class="hero__title">Профессиональные услуги строительной компании по умеренной цене</h1>
+                    <div class="hero__description">
+                        Поставки напрямую с заводов-изготовителей и большой объем закупок
+                        обеспечивают оптовые цены и позволяют вам значительно сэкономить на строительных материалах.
+                    </div>
+                    <button class="btn btn--rounded btn--l">
+                        <span class="btn__text">Заказать звонок</span>
+                        <div class="btn__icon">
+                            <svg width="15" height="23" viewBox="0 0 15 23" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M14.3789 11.5C14.3789 11.9122 14.2063 12.3244 13.8618 12.6387L3.01553 22.5282C2.32558 23.1573 1.20693 23.1573 0.517257 22.5282C-0.172419 21.8993 -0.172419 20.8796 0.517257 20.2504L10.1146 11.5L0.517591 2.74963C-0.172085 2.12053 -0.172085 1.10085 0.517591 0.472057C1.20727 -0.15735 2.32591 -0.15735 3.01586 0.472057L13.8621 10.3614C14.2067 10.6758 14.3789 11.088 14.3789 11.5Z" fill="#1A1D25"/>
+                            </svg>
+                            <svg width="15" height="23" viewBox="0 0 15 23" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M14.3789 11.5C14.3789 11.9122 14.2063 12.3244 13.8618 12.6387L3.01553 22.5282C2.32558 23.1573 1.20693 23.1573 0.517257 22.5282C-0.172419 21.8993 -0.172419 20.8796 0.517257 20.2504L10.1146 11.5L0.517591 2.74963C-0.172085 2.12053 -0.172085 1.10085 0.517591 0.472057C1.20727 -0.15735 2.32591 -0.15735 3.01586 0.472057L13.8621 10.3614C14.2067 10.6758 14.3789 11.088 14.3789 11.5Z" fill="#1A1D25"/>
+                            </svg>
+                        </div>
+                    </button>
+                </div>
+            </div>
+        </section>
     </main>
 
     <footer class="section-footer section-outer">
